--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     permissions:
       contents: read
-      pull-requests: write
+      pull-requests: self-hosted
 
     steps:
     - uses: actions/labeler@v4
