--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v2.2.0
         with:
-          lane: beta
+          lane: simple
         env:
           ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
           ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
