--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -17,8 +17,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up ruby env
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7.2
+          bundler-cache: true
+
       - name: Deploy iOS Beta to TestFlight via Fastlane
-        uses: maierj/fastlane-action@v2.2.0
+        uses: maierj/fastlane-action@v2
         with:
           lane: simple
         env:
