--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -20,6 +20,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6.8'
+        env:
+          ImageOS: macos1015
 
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v2.2.0
