--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -17,11 +17,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - uses: ruby/setup-ruby@v1
+      - uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.6.8'
-        env:
-          ImageOS: macos1015
+          ruby-version: '2.6'
 
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v2.2.0
