--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           ruby-version: '2.6.8'
         env:
-          ImageOS: macos12
+          ImageOS: macos-latest
 
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v2.2.0
