--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -17,17 +17,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - uses: ruby/setup-ruby@v1
-      #   with:
-      #     ruby-version: '2.6'
-      #   env:
-      #     ImageOS: macos12
-
-      - name: Deploy iOS Beta to TestFlight via Fastlane
-        uses: maierj/fastlane-action@v2.2.0
+      - name: "Setup Ruby version"
+        uses: ruby/setup-ruby@v1
         with:
-          lane: 'simple'
-        # env:
-        #   ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
-        #   ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
-        #   ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
+          ruby-version: '2.6'
+        env:
+          ImageOS: macos12
+
+      # - name: Deploy iOS Beta to TestFlight via Fastlane
+      #   uses: maierj/fastlane-action@v2.2.0
+      #   with:
+      #     lane: 'simple'
+      #   env:
+      #     ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
+      #     ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
+      #     ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
