--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -21,6 +21,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6'
+          bundler-cache: true
         env:
           ImageOS: macos12
 
