--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -25,11 +25,11 @@ jobs:
         env:
           ImageOS: macos12
 
-      # - name: Deploy iOS Beta to TestFlight via Fastlane
-      #   uses: maierj/fastlane-action@v2.2.0
-      #   with:
-      #     lane: 'simple'
-      #   env:
-      #     ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
-      #     ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
-      #     ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
+      - name: Deploy iOS Beta to TestFlight via Fastlane
+        uses: maierj/fastlane-action@v2.2.0
+        with:
+          lane: 'simple'
+        env:
+          ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
+          ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
+          ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
