--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -28,8 +28,16 @@ jobs:
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v2.2.0
         with:
-          lane: 'simple'
+          lane: 'beta'
         env:
           ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
           ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
           ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
+
+      - name: Commit changed build number
+        uses: EndBug/add-and-commit@v9.0.1
+        with:
+          add: 'nRF-Wi-Fi-Provisioner.xcodeproj/project.pbxproj'
+          message: Incremented build number
+          pathspec_error_handling: exitAtEnd
+
