--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -30,9 +30,20 @@ jobs:
         with:
           lane: 'beta'
         env:
-          ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
+          APP_STORE_CONNECT_TEAM_ID: '${{ secrets.APP_STORE_CONNECT_TEAM_ID }}'
           ASC_ISSUER_ID: '${{ secrets.ASC_ISSUER_ID }}'
           ASC_KEY_ID: '${{ secrets.ASC_KEY_ID }}'
+          ASC_PRIVATE_KEY: '${{ secrets.ASC_PRIVATE_KEY }}'
+          DEVELOPER_APP_ID: '${{ secrets.DEVELOPER_APP_ID }}'
+          DEVELOPER_APP_IDENTIFIER: '${{ secrets.DEVELOPER_APP_IDENTIFIER }}'
+          FASTLANE_APPLE_ID: '${{ secrets.FASTLANE_APPLE_ID }}'
+          GIT_URL: '${{ secrets.GIT_URL }}'
+          MATCH_PASSWORD: '${{ secrets.MATCH_PASSWORD }}'
+          PROVISIONING_PROFILE_SPECIFIER: '${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}'
+          TEMP_KEYCHAIN_USER: '${{ secrets.TEMP_KEYCHAIN_USER }}'
+          TEMP_KEYCHAIN_PASSWORD: '${{ secrets.TEMP_KEYCHAIN_PASSWORD }}'
+          DEVELOPER_PORTAL_TEAM_ID: '${{ secrets.DEVELOPER_PORTAL_TEAM_ID }}'
+          USERNAME: '${{ secrets.USERNAME }}'
 
       - name: Commit changed build number
         uses: EndBug/add-and-commit@v9.0.1
